# pointcloud-viewer

./: .drone.yml  .gitignore  .gitmodules  README.md
src/: CMakeLists.txt
src/core_library/: CMakeLists.txt  color_palette.cpp  color_palette.hpp  exception.hpp  geometry.hpp  geometry.inl  image.cpp  image.hpp  macros.hpp  padding.hpp  print.cpp  print.hpp  print.inl  singleton.hpp  stack.hpp  stack.inl  string.hpp  string.impl  string.inl  types.hpp  work_queue.cpp  work_queue.hpp  work_queue.inl
src/geometry/: CMakeLists.txt  aabb.cpp  aabb.hpp  cone.hpp  cone.inl  coord-frame.cpp  coord-frame.h  coord-frame.inl  frame.cpp  frame.hpp  frame.inl  geometry.hpp  geometry.inl  perpendicular.hpp  perpendicular.inl  plane.hpp  plane.inl  ray.hpp  ray.inl  swizzle.hpp  swizzle.inl  transform.hpp  transform.inl
src/pointcloud/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer.inl  convert_values.hpp  kdtree_index.cpp  kdtree_index.hpp  pcvd_file_format.hpp  pointcloud.cpp  pointcloud.hpp
src/pointcloud/exporter/: abstract_exporter.cpp  abstract_exporter.hpp  pcvd_exporter.cpp  pcvd_exporter.hpp  ply_exporter.cpp  ply_exporter.hpp
src/pointcloud/importer/: abstract_importer.cpp  abstract_importer.hpp  assimp_importer.cpp  assimp_importer.hpp  pcvd_importer.cpp  pcvd_importer.hpp  ply_importer.cpp  ply_importer.hpp
src/pointcloud_viewer/: CMakeLists.txt  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  clock.cpp  clock.hpp  declarations.hpp  kdtree_inspector.cpp  kdtree_inspector.hpp  keypoint_list.cpp  keypoint_list.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow_arguments.cpp  mainwindow_docks.cpp  mainwindow_menubar.cpp  navigation.cpp  navigation.hpp  point_cloud.cpp  point_cloud.hpp  point_cloud_layers.cpp  point_cloud_layers.hpp  point_shader.cpp  point_shader.hpp  point_shader_editor.cpp  point_shader_editor.hpp  point_shader_node_editor.cpp  pointcloud_inspector.cpp  pointcloud_inspector.hpp  pointcloud_layers.cpp  pointcloud_layers.hpp  usability_scheme.cpp  usability_scheme.hpp  version_text.cpp  version_text.hpp  viewport.cpp  viewport.hpp  visualizations.cpp  (+1 more)
src/pointcloud_viewer/flythrough/: flythrough.cpp  flythrough.hpp  flythrough_file.cpp  flythrough_file.hpp  interpolation.cpp  interpolation.hpp  keypoint.cpp  keypoint.hpp  playback.cpp  playback.hpp
src/pointcloud_viewer/helpers/: all_buffer_types.inl  all_buffer_types_combi.inl
src/pointcloud_viewer/shader_nodes/: make_vector_node.cpp  make_vector_node.hpp  math_operator_node.cpp  math_operator_node.hpp  mix_node.cpp  mix_node.hpp  output_node.cpp  output_node.hpp  property_node.cpp  property_node.hpp  rgb_node.cpp  rgb_node.hpp  rotate_quickly_node.cpp  rotate_quickly_node.hpp  split_vector_node.cpp  split_vector_node.hpp  spy_node.cpp  spy_node.hpp  switch_node.cpp  switch_node.hpp  value.cpp  value.hpp  value_node.cpp  value_node.hpp  vector_property_node.cpp  vector_property_node.hpp
src/pointcloud_viewer/widgets/: rgb_edit.cpp  rgb_edit.hpp
src/pointcloud_viewer/workers/: export_pointcloud.cpp  export_pointcloud.hpp  import_pointcloud.cpp  import_pointcloud.hpp  kdtree_builder_dialog.cpp  kdtree_builder_dialog.hpp  offline_renderer.cpp  offline_renderer.hpp  offline_renderer_dialogs.cpp  offline_renderer_dialogs.hpp
src/render_system/: CMakeLists.txt  initialization.hpp  point_renderer.cpp  point_renderer.hpp
src/render_system/opengl_450/: CMakeLists.txt  initialization.cpp  point_renderer.cpp
src/renderer/: CMakeLists.txt
src/renderer/gl450/: CMakeLists.txt  declarations.hpp  locate_shaders.cpp  locate_shaders.hpp  point_remapper.cpp  point_remapper.hpp  point_renderer.cpp  point_renderer.hpp  uniforms.cpp  uniforms.hpp
src/renderer/gl450/debug/: debug-mesh.cpp  debug-mesh.hpp  debug_mesh.cpp  debug_mesh.hpp
src/renderer/gl450/shader/: point_cloud.fs.glsl  point_cloud.vs.glsl
src/renderer/gl450/shader/debug/: debug_mesh.vs.glsl
src/renderer/gl450/shader/uniforms/: global.vs.glsl
