# For subclassing QObject
set(CMAKE_AUTOMOC ON)

find_package(Qt5Widgets 5.5 REQUIRED)

add_executable(pointcloud_viewer
  flythrough/flythrough.cpp
  flythrough/flythrough.hpp
  flythrough/flythrough_file.cpp
  flythrough/flythrough_file.hpp
  flythrough/interpolation.cpp
  flythrough/interpolation.hpp
  flythrough/keypoint.cpp
  flythrough/keypoint.hpp
  flythrough/playback.cpp
  flythrough/playback.hpp
  workers/export_pointcloud.cpp
  workers/export_pointcloud.hpp
  workers/import_pointcloud.cpp
  workers/import_pointcloud.hpp
  workers/kdtree_builder_dialog.cpp
  workers/kdtree_builder_dialog.hpp
  workers/offline_renderer.cpp
  workers/offline_renderer.hpp
  workers/offline_renderer_dialogs.cpp
  workers/offline_renderer_dialogs.hpp
  shader_nodes/make_vector_node.cpp
  shader_nodes/make_vector_node.hpp
  shader_nodes/math_operator_node.cpp
  shader_nodes/math_operator_node.hpp
  shader_nodes/property_node.cpp
  shader_nodes/property_node.hpp
  shader_nodes/rotate_quickly_node.cpp
  shader_nodes/rotate_quickly_node.hpp
  shader_nodes/rgb_node.cpp
  shader_nodes/rgb_node.hpp
  shader_nodes/split_vector_node.cpp
  shader_nodes/split_vector_node.hpp
  shader_nodes/spy_node.cpp
  shader_nodes/spy_node.hpp
  shader_nodes/switch_node.cpp
  shader_nodes/switch_node.hpp
  shader_nodes/output_node.cpp
  shader_nodes/output_node.hpp
  shader_nodes/value.cpp
  shader_nodes/value.hpp
  shader_nodes/value_node.cpp
  shader_nodes/value_node.hpp
  shader_nodes/vector_property_node.cpp
  shader_nodes/vector_property_node.hpp
  widgets/rgb_edit.cpp
  widgets/rgb_edit.hpp
  camera.cpp
  camera.hpp
  declarations.hpp
  kdtree_inspector.cpp
  kdtree_inspector.hpp
  keypoint_list.cpp
  keypoint_list.hpp
  main.cpp
  mainwindow.cpp
  mainwindow_arguments.cpp
  mainwindow_docks.cpp
  mainwindow_menubar.cpp
  mainwindow.hpp
  navigation.cpp
  navigation.hpp
  pointcloud_inspector.cpp
  pointcloud_inspector.hpp
  point_shader_editor.cpp
  point_shader_editor.hpp
  usability_scheme.cpp
  usability_scheme.hpp
  version_text.cpp
  version_text.hpp
  viewport.cpp
  viewport.hpp
  visualizations.cpp
  visualizations.hpp
)

target_link_libraries(pointcloud_viewer Qt5::Widgets NodeEditor::nodes glm renderer geometry pointcloud)
